[package]
name = "reploy-client"
version = "0.1.0"
authors = ["Maya Farber Brodsky <maya@farberbrodsky.com>", "Misha Farber Brodsky <misha@farberbrodsky.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

message_protocol = "0.1.1"
clap = "3.0.0-beta.1"
serde_json = "1.0.57"
serde = { version = "1.0.115", features = ["derive"] }
uuid = { version = "0.8.1", features = ["serde", "v4"] }